[tool.poetry]
name = "gd.docs"
version = "0.1.0"
description = "Documentation for Geometry Dash."
authors = ["gd-programming"]
license = "MIT"

readme = "README.md"

homepage = "https://docs.gd-programming.org/"
repository = "https://github.com/gd-programming/gd.docs"

keywords = ["gd", "docs", "documentation"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
]

[tool.poetry.urls]
Discord = "https://gd-programming.org/discord"
Issues = "https://github.com/gd-programming/gd.docs/issues"

[tool.poetry.dependencies]
python = ">= 3.7"

mkdocs = ">= 1.4.2"
mkdocs-material = ">= 9.1.6"

[build-system]
requires = ["poetry-core >= 1.5.2"]
build-backend = "poetry.core.masonry.api"
